2002-05-07  Luc Mazardo <luc@mazardo.com>

	* NEW: (README.cvs) add cvs instructions for tagging and mergind

	* ADD: add ocamlsdl-devel branch

2002-04-30  Luc Mazardo <luc@mazardo.com>

	* FIX (src/*tff*) render_text_{shaded, blended, solid}

	* CHANGE (src/sdlvideo_stub.c) remove Val_int in sdlvideo_map_rgb()
	* ADD  (src/sdlvideo_stub.c) 8 bit stuff (must test heavily)
	* FIX (src/sdlvideo_stub.c) applying patch for fullscreen mode

2002-04-29  Luc Mazardo <luc@mazardo.com>

	* ADD (src/*tff*) font_descent, font_ascent functions

	* CHANGE (src/*tff*) put labels in render_text_{shaded, blended, solid}

	* ADD (src/*ttf*) cdk_doc comments style

	* CHANGE (src/*video*) visibilty of map_rgb, it becomes external

2002-04-24  Luc Mazardo <luc@mazardo.com>

	* REMOVE (debian/): remove all files for a real debian packaging

	* CHANGE (samples/ocamlplayer.ml): adding Sdltimer.delay instead of true

	* CHANGE (samples/Makefile.in, src/Makefile.in, src/sdlmixer_stub.c,
		  src/sdlvideo_stub.c, src/stub_shared.c): applying  olivier 
		 andrieu patch

	* REMOVE (sdlvideo.ml, sdlvideo.mli, sdlvideo_stub.c, stub_shared.c, 
		  stub_shared.h, Makefile.in) removing experimental surface 
		  garbage collection

	* ADD (TODO): adding some future plan

	* CHANGE (src/stub_shared.h) add SDL_COLOR_FROM_VALUE macro

2002-04-04  Luc Mazardo <luc@mazardo.com>

	* NEW (samples/ocamlplayer.ml): a music player
	* CHANGE (samples/Makefile.in): added compilation rules for ocamlplayer

	* CHANGE (README) : added some comments

2002-04-04  Luc Mazardo <luc@mazardo.com>

	* CHANGE (src/sdlevent_stub.c, src/sdlevent.ml*): applying Josh 
	Cogliati patch about aalib and KEY_UNKNOWN

	* CHANGE (src/sdlttf_stub.c): applying Nathan Whitehead patch about 
	TTF_RenderText_Shaded

2002-03-26  Luc Mazardo <luc@mazardo.com>

	* CHANGE (samples/example.ml) apply patch from josh cogliati 
	  for using alpha level in example.ml

	* CHANGE (src/sdlvideo_stub.c): apply patch from guillaume cottenceau 